@@ -278,7 +278,12 @@ def set_kernel():
 	install_profile.set_kernel_source_pkg(None, menuitem, None)
 	if d.yesno("Do you want to use genkernel to automatically generate your kernel?") == DLG_NO:
 		code, custom_kernel_uri = d.inputbox("Enter the custom kernel uri")
-		if code == DLG_OK: install_profile.set_kernel_config_uri(None, custom_kernel_uri, None)
+		if code == DLG_OK: 
+			if custom_kernel_uri: 
+					if not GLIUtility.is_uri(custom_kernel_uri, checklocal=local_install):
+						d.msgbox("The specified URI is invalid.  It was not saved.  Please go back and try again.");
+					else install_profile.set_kernel_config_uri(None, custom_kernel_uri, None)
+			else: d.msgbox("No URI was specified!")
 	else: 
 		if d.yesno("Do you want the bootsplash?") == DLG_YES:
 			install_profile.set_kernel_bootsplash(None, True, None)
