@@ -7,6 +7,7 @@ dialogfe (05 Jan 2005):
   added another patch from zahna for portage tarball selection.
   Added a choice for local_install which determines error checking on tarballs
   and whether to use existing partitions by default.
+  local_install also checks the custom_kernel_config_uri
 
   24 Mar 2005; Preston Cody <codeman@gentoo.org>
   Added hostname, domainname, and nisdomainname to networking list.
